--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:title="@string/item_1"
         android:id="@+id/item1_id"/>
@@ -11,4 +12,9 @@
     <item
         android:title="@string/item3"
         android:id="@+id/item3_id"/>
+
+    <item android:title=""
+        android:id="@+id/search_id"
+        android:icon="@drawable/search"
+        app:showAsAction="ifRoom"/>
 </menu>
